--- a/sftp-server/values.yaml
+++ b/sftp-server/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 image:
-  repository: quay.io/openvnf/sftp
+  repository: atmoz/sftp
   tag: alpine-3.7
   pullPolicy: IfNotPresent
 
@@ -44,25 +44,6 @@ persistentVolume:
   size: 20Gi
   # storageClass: "-"
   subPath: ""
-
-vxlanController:
-  enabled: false
-  annotationKey: vxlan.openvnf.org/networks
-  metadataKey: vxlan.openvnf.org
-  image:
-    repository: openvnf/kube-vxlan-controller-agent
-    tag: 2.1.0
-    pullPolicy: IfNotPresent
-  network: "vxeth0"
-  ip: {}
-  route: {}
-  resources:
-    limits:
-      cpu: 50m
-      memory: 64Mi
-    requests:
-      cpu: 50m
-      memory: 64Mi
 
 resources:
   sftp:
