--- a/sftp-server/values.yaml
+++ b/sftp-server/values.yaml
@@ -3,9 +3,11 @@
 # Declare variables to be passed into your templates.
 
 image:
-  repository: atmoz/sftp
-  tag: alpine-3.7
+  repository: docker.pkg.github.com/spring-financial-group/sftp/sftp:sftp
+  tag: latest
   pullPolicy: IfNotPresent
+  pullSecrets:
+    - github
 
 nameOverride: ""
 fullnameOverride: ""
