--- a/sftp-server/values.yaml
+++ b/sftp-server/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 image:
-  repository: docker.pkg.github.com/spring-financial-group/sftp/sftp:sftp
+  repository: docker.pkg.github.com/spring-financial-group/sftp/sftp
   tag: latest
   pullPolicy: IfNotPresent
   pullSecrets:
