--- a/sftp-server/templates/deployment.yaml
+++ b/sftp-server/templates/deployment.yaml
@@ -21,6 +21,11 @@ spec:
         app.kubernetes.io/name: {{ include "sftp-server.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
+      {{- if .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range .Values.image.pullSecrets }}
+        - name: {{ . }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
