Change external port to (hopefully) avoid bot spam.

--- a/sftp-server/templates/service.yaml
+++ b/sftp-server/templates/service.yaml
@@ -13,6 +13,7 @@ spec:
   ports:
     - port: {{ .Values.service.port }}
       targetPort: ssh
+      nodePort: 3322
       protocol: TCP
       name: ssh
   selector:
