Adjusted node port within values and included only v10 of charts.

--- a/sftp-server/templates/service.yaml
+++ b/sftp-server/templates/service.yaml
@@ -13,7 +13,7 @@ spec:
   ports:
     - port: {{ .Values.service.port }}
       targetPort: ssh
-      nodePort: 3322
+      nodePort: {{ .Values.service.nodePort }}
       protocol: TCP
       name: ssh
   selector:
